# gerbil

./: .gitignore  .gitmodules  .worktreeinclude  Makefile  README.md  pyproject.toml
outputs/dataset/: gerbil.json  hamster.json
outputs/sample/: interesting_projects.json
resources/scripts/: README.md  run-with-service.sh  services.json  setup-service.sh
scripts/: agent_patch_extraction.py  analysis_mover.py  check_log_analysis_consistency.py  dataset_extraction.py  missing_analysis.py  missing_from_log.py  parse_saint_gerbil.py  prune_dataset_paths.py  trajectory_extraction.py
src/gerbil/: __main__.py  cli.py
tests/: __init__.py  cldk_factories.py  conftest.py  fake_java_analysis.py  figures_builders.py  statistics_builders.py  test_analysis_mover.py  test_annotation_matching.py  test_apache_httpclient_constructor_path.py  test_architecture_boundaries.py  test_assertion_analysis_decomposition.py  test_assertion_analysis_strictness.py  test_assertion_classification.py  test_assertion_extraction_direct.py  test_assertion_oracle_direct.py  test_assertion_status_direct.py  test_assertion_surface_direct.py  test_auth_labels.py  test_bracket_invalid_url_literals.py  test_call_site_chains.py  test_citrus_http.py  test_class_annotation_hierarchy.py  test_class_fixture_union.py  test_class_name_resolution.py  test_cldk_call_site_positions.py  test_cldk_factories.py  test_cli.py  test_common_and_pipeline.py  test_common_module_smoke.py  test_concat_truncated_path_extraction.py  test_constant_resolution.py  test_constant_resolved_path_extraction.py  test_controller_unit_test.py  test_endpoint_coverage_analysis.py  test_endpoint_outcome_attribution.py  test_endpoint_parameter_analysis.py  test_figures_cli.py  test_figures_http_sequences.py  test_figures_loading.py  test_figures_plotting.py  (+76 more)
tests/integration/: __init__.py  conftest.py  (+6 more)
(+213 files in other folders)
