[project]
name = "gerbil"
version = "0.1.0"
description = "Static characterization of Java HTTP API tests"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cldk>=1.0.6,<2.0.0",
    "matplotlib>=3.9,<4.0",
    "pydantic>=2.11.0,<3.0.0",
    "rich>=13.0,<15.0",
    "typer>=0.16.0,<0.17.0",
]

[tool.uv.sources]
cldk = { git = "https://github.com/codellm-devkit/python-sdk.git", branch = "main" }

[dependency-groups]
dev = [
    "black>=24.10,<26.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
gerbil = "gerbil.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gerbil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-vv --tb=short --ignore=tests/resources"
markers = [
    "integration: marks tests that require git submodules and CLDK (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["tests/resources"]

[tool.ruff.lint]
extend-select = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"urllib.parse.urlparse".msg = "Use gerbil.analysis.shared.url_utils.safe_urlparse; urlsplit raises ValueError on bracket-broken literals."
"urllib.parse.urlsplit".msg = "Use gerbil.analysis.shared.url_utils.safe_urlparse; urlsplit raises ValueError on bracket-broken literals."

[tool.mypy]
python_version = "3.11"
files = ["src/gerbil", "tests"]
exclude = "(^tests/resources/)"
ignore_missing_imports = true
warn_unused_configs = true
pretty = true
show_error_codes = true

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
/(
    tests/resources
)/
'''
